[package]
name = "cactusref"
version = "0.1.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/cactusref"
documentation = "https://docs.rs/cactusref"
homepage = "https://github.com/artichoke/cactusref"
description = "Cycle-aware reference counting smart pointer"
keywords = ["garbage-collection", "gc", "pointer", "rc", "tracing"]
categories = ["data-structures", "memory-management", "no-std"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]
hashbrown = { version = "0.11", default-features = false, features = ["inline-more"] }
log = "0.4.6"
rustc-hash = { version = "1.1", default-features = false }

[dev-dependencies]
# Enable debug and trace-level logging in tests.
env_logger = { version = "0.8.4", default-features = false }
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"
