[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[workspace]
members = ["."]

[[bench]]
name = "drop"
harness = false

[dependencies]

[dev-dependencies]
# Benchmarking support on stable Rust.
criterion = "0.4.0"
# benchmark target
cactusref = { path = ".." }
env_logger = { version = "0.9.0", default-features = false }
log = "0.4.6"
